--- a/speedtest-net/speedtest.yaml
+++ b/speedtest-net/speedtest.yaml
@@ -4,13 +4,13 @@ shell_command:
   speedtest_net_run_test: '/config/speedtest-net/mqtt_pub.sh'
 
 automation:
-  # Run the test on startup, and run 3x/hour
+  # Run the test on startup, and run hourly
   - alias: speedtest_net_run_test
     trigger:
       - platform: homeassistant
         event: start
       - platform: time_pattern
-        minutes: /20
+        minutes: 0
     action:
       service: shell_command.speedtest_net_run_test
 
